[project]
name = "resetradar"
version = "0.1.0"
description = "Tracks and broadcasts global AI usage-limit resets (Claude / Codex)"
authors = [
    { name = "Giulio Capecchi", email = "72887575+giuliocapecchi@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
resetradar = "resetradar.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
